Fixed split tab group favicon missaligned (closes https://github.com/zen-browser/desktop/issues/6962)

--- a/src/browser/base/content/zen-styles/zen-folders.css
+++ b/src/browser/base/content/zen-styles/zen-folders.css
@@ -61,7 +61,9 @@ tab-group[split-view-group] {
 
     & .tab-content {
       min-width: 0;
-      justify-content: unset !important;
+      :root[zen-sidebar-expanded='true'] & {
+        justify-content: unset !important;
+      }
     }
   }
 
